--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:4000",
+    "proxy": "https://google-books-backend.onrender.com",
     "dependencies": {
       "@apollo/client": "^3.5.8",
       "@testing-library/jest-dom": "^4.2.4",
